Fix border is too big for mobile platform

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding:60px;
+    padding:10%;
 }
 
 .tool-button {
